# user-monitoring-core

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
lib/: CMakeLists.txt  download-boost.1.80.0-library.bat  install-boost.1.80.0-library.bat
src/: abstract-os.h  iwork-os.h  main.cpp  main.h  os-factory.h  windows-factory.cpp  windows-factory.h  work-linux.cpp  work-linux.h  work-windows.cpp  work-windows.h
test/: CMakeLists.txt  test-far.cpp  test-main.cpp
